# resume-tailorer-rag

./: main.py  pyproject.toml
