[project]
name = "resume-tailorer-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "pandas>=2.3.3",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
]
